--- a/index_backup2.html
+++ b/index_backup2.html
@@ -49,8 +49,10 @@
 </div>
 
 <div class="left100 bottom50">
+   <h2 style="font-size:3em;">UNDER DEVELOPMENT</h2>
  <label for="search_field_input">Search Elements (Alphabetical Search):</label>
- <input id="search_field_input" onkeyup="search_table()" type="text">
+ <input id="search_field_input" onkeyup="search_periodic()" type="text">
+   <div id="response">Response</div>
 </div>
 <!-- IMPORTANT do not change ARIA LABEL.  The aria-label is used to over-ride screen reader mispronunciation of numbers with decimals in them as they apply to atomic weights It is not the desired user experience to have the screen reader read the numbers as thousands--> 
 <!-- Excerpt from https://www.w3.org/TR/wai-aria/#aria-label If the label text is visible on screen, authors SHOULD use aria-labelledby and SHOULD NOT use aria-label. There may be instances where the name of an element cannot be determined programmatically from the content of the element, and there are cases where providing a visible label is not the desired user experience. -->    
@@ -1085,7 +1087,16 @@
              <li data-ev="5.6704"><span class="bigfont1" aria-label="ionization energy 5 . 6 7 0 4">5.6704</span></li> 
           </ul>
       </td>
-      <td>Row 8, Cell 10</td>
+       <td id="Gadolinium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="64"><span class="bigfont1" aria-label="atomic number 64">64</span></li>
+             <li data-symbol="G d" aria-label="atomic symbol G d" class="bigfont2">G<span class="letter-tight">d</span></li>
+             <li data-element="gadolinium"><span class="bigfont1" aria-label="element">Gadolinium</span></li>
+             <li data-weight="157.25"><span class="bigfont1" aria-label="standard atomic weight 157 . 2 5">157.25</span></li>
+             <li data-groundstate="gadolinium"><span class="bigfont1" aria-label="ground [Xe]4f 7 5d 6s 2">[Xe]4f<sup>7</sup>5d6s<sup>2</sup><span></li>
+             <li data-ev="6.1498"><span class="bigfont1" aria-label="ionization energy 6 . 1 4 9 8">6.1498</span></li> 
+          </ul>
+      </td>
       <td>Row 8, Cell 11</td>
       <td>Row 8, Cell 12</td>
       <td>Row 8, Cell 13</td>
@@ -1131,31 +1142,29 @@
 </footer>
   <!-- https://stackoverflow.com/questions/9127498/how-to-perform-a-real-time-search-and-filter-on-a-html-table -->
 <script>
-function search_table(){
-  // Declare variables 
-  var input, filter, table, tr, td, i;
-  input = document.getElementById("search_field_input");
-  filter = input.value.toUpperCase();
-  table = document.getElementById("table_id");
-  tr = table.getElementsByTagName("tr");
+function search_periodic(){
+var letters = document.getElementById("search_field_input").value;
+var text;
 
-  // Loop through all table rows, and hide those who don't match the search query
-  for (i = 0; i < tr.length; i++) {
-    td = tr[i].getElementsByTagName("td") ; 
-    for(j=0 ; j<td.length ; j++)
-    {
-      let tdata = td[j] ;
-      if (tdata) {
-        if (tdata.innerHTML.toUpperCase().indexOf(filter) > -1) {
-          tr[i].style.display = "";
-          break ; 
-        } else {
-          tr[i].style.display = "none";
-        }
-      } 
-    }
-  }
+   // If the letter is "c"
+   if (letters === "Hydrogen") {
+     text = "Hydrogen" 
+        + "<br/>" 
+        + "Atomic Number: 1"  + "<br/>"
+        + "Standard Atomic Weight: 1.008"  + "<br/>"
+        + "Ground State Configuration: 1s"  + "<br/>"
+        + "<br/>";
+
+   // If the letter is "b" or "d"
+   } else if (letters === "b" || letters === "d") {
+     text = "Close, but not close enough.";
+
+   // If the letter is anything else
+   } else {
+     text = "Waaay off..";
+   }
+document.getElementById("response").innerHTML = text;
 }
 </script> 
- </body>   
+</body>   
 </html>
