--- a/index.html
+++ b/index.html
@@ -1148,11 +1148,13 @@ var text;
 
    // If the letter is "c"
    if (letters === "Hydrogen") {
-     text = "Hydrogen" 
+     text = "<br/>" 
+        + "<strong>" + "Hydrogen" + "</strong>"
         + "<br/>" 
         + "Atomic Number: 1"  + "<br/>"
         + "Standard Atomic Weight: 1.008"  + "<br/>"
         + "Ground State Configuration: 1s"  + "<br/>"
+        + "Ionization Energy: 13.5984"  + "<br/>"
         + "<br/>";
 
    // If the letter is "b" or "d"
