--- a/index_backup2.html
+++ b/index_backup2.html
@@ -52,7 +52,7 @@
    <h2 style="font-size:3em;">UNDER DEVELOPMENT</h2>
  <label for="search_field_input">Search Elements (Alphabetical Search):</label>
  <input id="search_field_input" onkeyup="search_periodic()" type="text">
-   <div id="response">Response</div>
+   <div id="response" role="region" aria-live="polite">Response</div>
 </div>
 <!-- IMPORTANT do not change ARIA LABEL.  The aria-label is used to over-ride screen reader mispronunciation of numbers with decimals in them as they apply to atomic weights It is not the desired user experience to have the screen reader read the numbers as thousands--> 
 <!-- Excerpt from https://www.w3.org/TR/wai-aria/#aria-label If the label text is visible on screen, authors SHOULD use aria-labelledby and SHOULD NOT use aria-label. There may be instances where the name of an element cannot be determined programmatically from the content of the element, and there are cases where providing a visible label is not the desired user experience. -->    
@@ -1097,7 +1097,16 @@
              <li data-ev="6.1498"><span class="bigfont1" aria-label="ionization energy 6 . 1 4 9 8">6.1498</span></li> 
           </ul>
       </td>
-      <td>Row 8, Cell 11</td>
+       <td id="Gadolinium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="64"><span class="bigfont1" aria-label="atomic number 64">64</span></li>
+             <li data-symbol="G d" aria-label="atomic symbol G d" class="bigfont2">G<span class="letter-tight">d</span></li>
+             <li data-element="gadolinium"><span class="bigfont1" aria-label="element">Gadolinium</span></li>
+             <li data-weight="157.25"><span class="bigfont1" aria-label="standard atomic weight 157 . 2 5">157.25</span></li>
+             <li data-groundstate="gadolinium"><span class="bigfont1" aria-label="ground [Xe]4f 7 5d 6s 2">[Xe]4f<sup>7</sup>5d6s<sup>2</sup><span></li>
+             <li data-ev="6.1498"><span class="bigfont1" aria-label="ionization energy 6 . 1 4 9 8">6.1498</span></li> 
+          </ul>
+      </td>
       <td>Row 8, Cell 12</td>
       <td>Row 8, Cell 13</td>
       <td>Row 8, Cell 14</td>
@@ -1134,25 +1143,30 @@
     <footer>
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
-        Content: 6 December 2019<br />
+        Content: 3 January 2020<br />
         WebAim: 2 December 2019 0<br />
         NuHTML: 2 December 2019 multiple aria-label warnings (expected, in this case)<br />
         Note:aria-label used to over-ride screen reader mispronunciations of atomic weights<br />
+        Note:aria-live role="region" added 3 Jan 2020 to display box for elements<br />
   </div>
 </footer>
   <!-- https://stackoverflow.com/questions/9127498/how-to-perform-a-real-time-search-and-filter-on-a-html-table -->
 <script>
 function search_periodic(){
 var letters = document.getElementById("search_field_input").value;
+var letter = letters.toUpperCase();
 var text;
 
    // If the letter is "c"
-   if (letters === "Hydrogen") {
-     text = "Hydrogen" 
+   if (letter === "HYDROGEN") {
+     text = "<br/>" 
+        + "<strong>" + "Hydrogen" + "</strong>"
         + "<br/>" 
+        + "Ground State" + "2 S 1/2" + "<br/>"
         + "Atomic Number: 1"  + "<br/>"
         + "Standard Atomic Weight: 1.008"  + "<br/>"
         + "Ground State Configuration: 1s"  + "<br/>"
+        + "Ionization Energy: 13.5984"  + "<br/>"
         + "<br/>";
 
    // If the letter is "b" or "d"
@@ -1166,5 +1180,5 @@ var text;
 document.getElementById("response").innerHTML = text;
 }
 </script> 
-</body>   
+ </body>   
 </html>
