--- a/index.html
+++ b/index.html
@@ -1097,14 +1097,14 @@
              <li data-ev="6.1498"><span class="bigfont1" aria-label="ionization energy 6 . 1 4 9 8">6.1498</span></li> 
           </ul>
       </td>
-       <td id="Gadolinium" class="solids" tabindex="0">
+       <td id="Terbium" class="solids" tabindex="0">
             <ul>
-             <li data-atomicnumber="64"><span class="bigfont1" aria-label="atomic number 64">64</span></li>
-             <li data-symbol="G d" aria-label="atomic symbol G d" class="bigfont2">G<span class="letter-tight">d</span></li>
-             <li data-element="gadolinium"><span class="bigfont1" aria-label="element">Gadolinium</span></li>
-             <li data-weight="157.25"><span class="bigfont1" aria-label="standard atomic weight 157 . 2 5">157.25</span></li>
-             <li data-groundstate="gadolinium"><span class="bigfont1" aria-label="ground [Xe]4f 7 5d 6s 2">[Xe]4f<sup>7</sup>5d6s<sup>2</sup><span></li>
-             <li data-ev="6.1498"><span class="bigfont1" aria-label="ionization energy 6 . 1 4 9 8">6.1498</span></li> 
+             <li data-atomicnumber="65"><span class="bigfont1" aria-label="atomic number 65">65</span></li>
+             <li data-symbol="T b" aria-label="atomic symbol T b" class="bigfont2">T<span class="letter-tight">b</span></li>
+             <li data-element="terbium"><span class="bigfont1" aria-label="element">Terbium</span></li>
+             <li data-weight="158.93"><span class="bigfont1" aria-label="standard atomic weight 158 . 9 3">158.93</span></li>
+             <li data-groundstate="terbium"><span class="bigfont1" aria-label="ground [Xe]4f 9 6s 2">[Xe]4f<sup>9</sup>6s<sup>2</sup><span></li>
+             <li data-ev="5.8638"><span class="bigfont1" aria-label="ionization energy 5 . 8 6 3 8">5.8638</span></li> 
           </ul>
       </td>
       <td>Row 8, Cell 12</td>
