--- a/index.html
+++ b/index.html
@@ -45,12 +45,11 @@
 <div class="left100 bottom50">
 <h1>Searchable Periodic Table</h1>
 <p tabindex="0">The elements are set up in a table, one element per cell. Each table cell contains the name of the element, and a list of five items containing the atomic number, the atomic symbol, the atomic weight, the ground state configuration, and the ionization energy.</p>
-<p tabindex="0">Tab</p>
 </div>
 
 <div class="left100 bottom50">
-   <h2 style="font-size:3em;">UNDER DEVELOPMENT</h2>
- <label for="search_field_input">Search Elements (Alphabetical Search):</label>
+ <h2 style="font-size:3em;">UNDER DEVELOPMENT</h2>
+ <label for="search_field_input">Search elements by name:</label>
  <input id="search_field_input" onkeyup="search_periodic()" type="text">
    <div id="response" role="region" aria-live="polite">Response</div>
 </div>
