--- a/index_backup2.html
+++ b/index_backup2.html
@@ -45,12 +45,11 @@
 <div class="left100 bottom50">
 <h1>Searchable Periodic Table</h1>
 <p tabindex="0">The elements are set up in a table, one element per cell. Each table cell contains the name of the element, and a list of five items containing the atomic number, the atomic symbol, the atomic weight, the ground state configuration, and the ionization energy.</p>
-<p tabindex="0">Tab</p>
 </div>
 
 <div class="left100 bottom50">
-   <h2 style="font-size:3em;">UNDER DEVELOPMENT</h2>
- <label for="search_field_input">Search Elements (Alphabetical Search):</label>
+ <h2 style="font-size:3em;">UNDER DEVELOPMENT</h2>
+ <label for="search_field_input">Search elements by name:</label>
  <input id="search_field_input" onkeyup="search_periodic()" type="text">
    <div id="response" role="region" aria-live="polite">Response</div>
 </div>
@@ -1097,14 +1096,14 @@
              <li data-ev="6.1498"><span class="bigfont1" aria-label="ionization energy 6 . 1 4 9 8">6.1498</span></li> 
           </ul>
       </td>
-       <td id="Gadolinium" class="solids" tabindex="0">
+       <td id="Terbium" class="solids" tabindex="0">
             <ul>
-             <li data-atomicnumber="64"><span class="bigfont1" aria-label="atomic number 64">64</span></li>
-             <li data-symbol="G d" aria-label="atomic symbol G d" class="bigfont2">G<span class="letter-tight">d</span></li>
-             <li data-element="gadolinium"><span class="bigfont1" aria-label="element">Gadolinium</span></li>
-             <li data-weight="157.25"><span class="bigfont1" aria-label="standard atomic weight 157 . 2 5">157.25</span></li>
-             <li data-groundstate="gadolinium"><span class="bigfont1" aria-label="ground [Xe]4f 7 5d 6s 2">[Xe]4f<sup>7</sup>5d6s<sup>2</sup><span></li>
-             <li data-ev="6.1498"><span class="bigfont1" aria-label="ionization energy 6 . 1 4 9 8">6.1498</span></li> 
+             <li data-atomicnumber="65"><span class="bigfont1" aria-label="atomic number 65">65</span></li>
+             <li data-symbol="T b" aria-label="atomic symbol T b" class="bigfont2">T<span class="letter-tight">b</span></li>
+             <li data-element="terbium"><span class="bigfont1" aria-label="element">Terbium</span></li>
+             <li data-weight="158.93"><span class="bigfont1" aria-label="standard atomic weight 158 . 9 3">158.93</span></li>
+             <li data-groundstate="terbium"><span class="bigfont1" aria-label="ground [Xe]4f 9 6s 2">[Xe]4f<sup>9</sup>6s<sup>2</sup><span></li>
+             <li data-ev="5.8638"><span class="bigfont1" aria-label="ionization energy 5 . 8 6 3 8">5.8638</span></li> 
           </ul>
       </td>
       <td>Row 8, Cell 12</td>
@@ -1159,10 +1158,11 @@ var text;
 
    // If the letter is "c"
    if (letter === "HYDROGEN") {
-     text = "<br/>" 
+     text = "<br/>"
+        + "<br/>"
         + "<strong>" + "Hydrogen" + "</strong>"
         + "<br/>" 
-        + "Ground State" + "2 S 1/2" + "<br/>"
+        + "Ground State: 2 S 1/2" + "<br/>"
         + "Atomic Number: 1"  + "<br/>"
         + "Standard Atomic Weight: 1.008"  + "<br/>"
         + "Ground State Configuration: 1s"  + "<br/>"
