--- a/index.html
+++ b/index.html
@@ -1086,7 +1086,7 @@
              <li data-ev="5.6704"><span class="bigfont1" aria-label="ionization energy 5 . 6 7 0 4">5.6704</span></li> 
           </ul>
       </td>
-       <td id="Gadolinium" class="solids" tabindex="0">
+       <td id="gadolinium" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="64"><span class="bigfont1" aria-label="atomic number 64">64</span></li>
              <li data-symbol="G d" aria-label="atomic symbol G d" class="bigfont2">G<span class="letter-tight">d</span></li>
@@ -1096,7 +1096,7 @@
              <li data-ev="6.1498"><span class="bigfont1" aria-label="ionization energy 6 . 1 4 9 8">6.1498</span></li> 
           </ul>
       </td>
-       <td id="Terbium" class="solids" tabindex="0">
+       <td id="terbium" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="65"><span class="bigfont1" aria-label="atomic number 65">65</span></li>
              <li data-symbol="T b" aria-label="atomic symbol T b" class="bigfont2">T<span class="letter-tight">b</span></li>
@@ -1106,7 +1106,16 @@
              <li data-ev="5.8638"><span class="bigfont1" aria-label="ionization energy 5 . 8 6 3 8">5.8638</span></li> 
           </ul>
       </td>
-      <td>Row 8, Cell 12</td>
+      <td id="dysprosium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="66"><span class="bigfont1" aria-label="atomic number 66">66</span></li>
+             <li data-symbol="D y" aria-label="atomic symbol D y" class="bigfont2">D<span class="letter-tight">y</span></li>
+             <li data-element="dysprosium"><span class="bigfont1" aria-label="element">Dysprosium</span></li>
+             <li data-weight="162.50"><span class="bigfont1" aria-label="standard atomic weight 162  .5 0">162.50</span></li>
+             <li data-groundstate="dysprosium"><span class="bigfont1" aria-label="ground [Xe]4f 10 6s 2">[Xe]4f<sup>10</sup>6s<sup>2</sup><span></li>
+             <li data-ev="5.9391"><span class="bigfont1" aria-label="ionization energy 5 . 9 3 9 1">5.9391</span></li> 
+          </ul>
+      </td>
       <td>Row 8, Cell 13</td>
       <td>Row 8, Cell 14</td>
       <td>Row 8, Cell 15</td>
