--- a/index_backup2.html
+++ b/index_backup2.html
@@ -297,7 +297,7 @@
              <li data-symbol="ar" aria-label="atomic symbol A r" class="bigfont2">A<span class="letter-tight">r</span></li>
              <li data-element="argon"><span class="bigfont1" aria-label="element">Argon</span></li>
              <li data-weight="39.948"><span class="bigfont1" aria-label="standard atomic weight 39 . 9 4 8">39.948</span></li>
-             <li data-groundstate="argon"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="argon"><span class="bigfont1" aria-label="ground [Ar]4s">[Ar]4s</span></li>
              <li data-ev="15.7596"><span class="bigfont1" aria-label="ionization energy 15 . 7 5 9 6">15.7596</span></li> 
           </ul>
       </td>
@@ -319,7 +319,7 @@
              <li data-symbol="ca" aria-label="atomic symbol C a" class="bigfont2">C<span class="letter-tight">a</span></li>
              <li data-element="calcium"><span class="bigfont1" aria-label="element">Calcium</span></li>
              <li data-weight="40.078"><span class="bigfont1" aria-label="standard atomic weight 40 . 0 7 8">40.078</span></li>
-             <li data-groundstate="calcium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="calcium"><span class="bigfont1" aria-label="ground [Ar]4s 2">[Ar]4s<sup>2</sup></span></li>
              <li data-ev="6.1132"><span class="bigfont1" aria-label="ionization energy 6 . 1 1 3 2">6.1132</span></li> 
           </ul>
       </td>
@@ -329,7 +329,7 @@
              <li data-symbol="sc" aria-label="atomic symbol S c" class="bigfont2">S<span class="letter-tight">c</span></li>
              <li data-element="scandium"><span class="bigfont1" aria-label="element">Scandium</span></li>
              <li data-weight="44.956"><span class="bigfont1" aria-label="standard atomic weight 44 . 9 5 6">44.956</span></li>
-             <li data-groundstate="scandium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="scandium"><span class="bigfont1" aria-label="ground [Ar]3d 4s 2">[Ar]3d4s<sup>2</sup></span></li>
              <li data-ev="6.5615"><span class="bigfont1" aria-label="ionization energy 6 . 5 6 1 5">6.5615</span></li> 
           </ul>
       </td>       
@@ -1392,12 +1392,25 @@ var text;
         + "<br/>"
         + "<strong>" + "Beryllium" + "</strong>"
         + "<br/>" 
-        + "Ground State: 1s<sup>2</sup>" + "<br/>"
-        + "Atomic Number: 3"  + "<br/>"
-        + "Standard Atomic Weight:  6.94"  + "<br/>"
+        + "Ground State: 1s<sup>2</sup>  2s<sup>2</sup>" + "<br/>"
+        + "Atomic Number: 4"  + "<br/>"
+        + "Standard Atomic Weight: 9.0122"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup> 2s"  + "<br/>"
-        + "Ionization Energy: 5.3917"  + "<br/>"
+        + "Ionization Energy: 9.32277"  + "<br/>"
         + "<br/>";
+       // If the letter is "Boron"
+   } else if (letter === "BORON") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Boron" + "</strong>"
+        + "<br/>" 
+        + "Ground State: 1s<sup>2</sup>  2s<sup>2</sup>" + "<br/>"
+        + "Atomic Number: 5"  + "<br/>"
+        + "Standard Atomic Weight:  10.81"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p"  + "<br/>"
+        + "Ionization Energy: 8.2980"  + "<br/>"
+        + "<br/>";
+
 
    // If the letter is anything else
       
